--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,7 +61,7 @@ div.post p.info{
   display: flex;
   gap: 10px;
 }
-div.post p.info a.author{
+div.post p.info span.author{
   color: #333;
 }
 div.post p.summary{
